# doc-extraction-benchmark

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONTRACT.md
results/: headtohead_n6.parquet  ocr_test100.parquet  results_summary.json
src/docbench/: __init__.py  cli.py  schema.py
src/docbench/datasets/: cord.py
src/docbench/extractors/: base.py  ocr.py  vlm_pixtral.py
src/docbench/scoring/: match.py  to_items.py
src/docbench/stats/: frequentist.py
tests/: test_frequentist.py  test_match.py  test_ocr_parse.py  test_pixtral_parse.py  test_to_items.py
