[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-extraction-benchmark"
version = "0.1.0"
description = "Honest VLM-vs-OCR field-level extraction benchmark on CORD, with item-level score export for downstream statistical inference."
readme = "README.md"
license = { text = "MIT" }
# ML/stats wheels (datasets, later PyMC consumers) lag new CPython; pin to 3.11/3.12.
requires-python = ">=3.11,<3.13"
authors = [{ name = "Fahil Ejaz" }]

dependencies = [
    "datasets>=2.19.0",
    "pillow>=10.0.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "pandera>=0.20.0",
    "numpy>=1.26.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "easyocr>=1.7.0"]
vlm = ["httpx>=0.27.0"]
stats = ["scipy>=1.13.0"]
dev = ["pytest>=8.0.0", "ruff>=0.5.0", "mypy>=1.10.0"]

[project.scripts]
docbench = "docbench.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
